...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="EK8-v5-iaK">
                                        <rect key="frame" x="0.0" y="0.0" width="85" height="156"/>
                                        <accessibility key="accessibilityConfiguration" identifier="currentCount"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="130"/>
                                        <nil key="highlightedColor"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XZW-qX-j6a">
                                        <rect key="frame" x="0.0" y="166" width="85" height="149"/>
                                        <accessibility key="accessibilityConfiguration" identifier="incrementCount" label="Increment Count"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="100"/>
                                        <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
...
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Count It" id="Soe-KL-mBZ">
                        <barButtonItem key="rightBarButtonItem" image="settingIcon" id="2Pc-1L-QZj">
                            <connections>
...
        <scene sceneID="hv3-xv-Rce">
            <objects>
                <tableViewController title="Settings" id="5Wo-Nf-qLe" customClass="SettingsViewController" customModule="ClickerApp" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="tei-Wz-hSA">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                                    </connections>
                                                </stepper>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Increment by 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkv-AT-kRL">
                                                    <rect key="frame" x="14" y="12" width="112" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="multiplierLabel"/>
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="knc-Y0-aPB" customClass="ColorPickerButton" customModule="ClickerApp" customModuleProvider="target">
                                                            <rect key="frame" x="130" y="0.0" width="120" height="35"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="blueButton"/>
                                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                            <state key="normal" title="Blue Color">
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QeM-o3-XS2" customClass="ColorPickerButton" customModule="ClickerApp" customModuleProvider="target">
                                                            <rect key="frame" x="390" y="0.0" width="119" height="35"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="yellowButton"/>
                                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                            <state key="normal" title="Yellow Color">
...
                                                    </variation>
                                                </stackView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rld-iP-8o4">
                                                    <rect key="frame" x="13" y="11" width="50" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Apple Watch Help" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WsI-pv-yh5">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="asg-Dd-gi2">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Follow me on Twitter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6bu-DP-Zuc">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
